# cmake_pkg

./: .gitignore  README.md  build_bar.bat  build_bar.sh  build_cust_cmd.bat  build_usepkg.bat  build_usepkg.sh
bar/: CMakeLists.txt
bar/cmake/: BarConfig.cmake.in  BarMacros.cmake  bar_version.h.in  create-barversion.cmake
bar/src/: CMakeLists.txt
bar/src/bar1/: CMakeLists.txt  bar1.cpp
bar/src/bar1/include/: bar1.h
bar/src/bar2/: CMakeLists.txt  bar2.cpp
bar/src/bar2/include/: bar2.h
cust_cmd/: CMakeLists.txt
usepkg/: CMakeLists.txt  cmakeversion.go.in  usepkg.cpp
